<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearningCenterApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in_username">User Name</string>
    <string name="log_in_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_signin">Sign In</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up_username">User Name</string>
    <string name="sign_up_createPass">Create Password</string>
    <string name="sign_up_confrimPass">Confirm Password</string>
    <string name="go_back">Go Back</string>
    <string name="commit_and_go_back">Commit and Go Back</string>
    <string name="title_activity_calender">CalenderActivity</string>
    <string name="calendar_search">Search</string>
    <string name="calendar_title">Tutor Calendar</string>
    <string name="title_activity_tutor_schedule">TutorScheduleActivity</string>
    <string name="tutor_schedule_title">Tutor Schedules</string>
    <string name="tutor">Tutor</string>
    <string name="time">Time</string>
    <string name="title_activity_specific_tutor">SpecificTutorActivity</string>
    <string name="specific_tutor_title">Schedule</string>
    <string name="name">Name</string>
    <string name="confirm_deletion">Delete Appointment</string>
    <string name="delete_message">Do you want to remove your appointment at %1$s?</string>
    <string name="notification_test">Evaluation</string>
    <string name="evaluation">Evalution</string>
    <string name="evaluation_message">You have finished your tutor session. Would you like to write and evaluation?</string>
    <string name="peer_tutor">Peer Tutor</string>
    <string name="title_activity_tutor_eval_form">TutorEvalFormActivity</string>
    <string name="tutor_eval_form">Tutor Evaluation Form</string>
    <string name="date">Date</string>
    <string name="name_you_optional">Your Name \n (Optional)</string>
    <string name="name_tutor_optional"> Tutor\'s Name \n(Optional)</string>
    <string name="class_year">Class Year</string>
    <string name="purpose_of_visit">Purpose of Visit(Course/Subject)</string>
    <string name="esl">English Second Language</string>
    <string name="tutor_eval_attitue"> Tutor\'s attitude and friendliness</string>
    <string name="tutor_eval_atmosphere">Learning atmosphere, environment</string>
    <string name="tutor_eval_knowledge"> Tutor\'s knowledge, ability</string>
    <string name="tutor_eval_student_understanding">Your understanding of the subject or topic after the session</string>
    <string name="tutor_eval_general">General opinion of this session</string>
    <string name="tutor_eval_explaination">Please rate the following from 1 to 5 \n (poor = 1, average = 3, excellent = 5)</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="username">Username</string>
    <string name="tutor_eval_addtional_comment">Additional comments or suggestions</string>
    <string name="commit">Commit</string>
    <string name="esl_tutor_eval">ESL</string>
    <string name="student">student</string>
    <string name="title_activity_peer_tutor_eval_form">PeerTutorEvalForm</string>
    <string name="peer_tutor_helped_needed_explaination">What help did the student need?</string>
    <string name="peer_tutor_attitude_of_tutee">Attitude of tutee</string>
    <string name="course">Course</string>
    <string name="professor">Professor</string>
    <string name="title_activity_esltutor_eval_form">ESLTutorEvalFormActivity</string>
    <string name="esl_tutor_evaluation_form">ESL Tutor Evaluation Form</string>
    <string name="peer_tutor_evaluation_form">Peer Tutor Evaluation Form</string>
    <string name="major">Major</string>
    <string name="title_activity_administrator">AdministratorActivity</string>
    <string name="make_tutor">Make Tutor</string>
    <string name="make_schedule">Make Schedule</string>
    <string name="title_activity_make_tutor">MakeTutorActivity</string>
    <string name="title_activity_make_schedule">MakeScheduleActivity</string>
    <string name="make_tutor_description">Do you want to make this student a tutor?</string>
    <string name="make_schedule_description">Set tutor working hour</string>
    <string name="title_activity_make_tutor_schedule">MakeTutorScheduleActivity</string>
    <string name="make_tutor_schedule_pick_date">Pick Tutor Working Date</string>
    <string name="make_tutor_schedule_start_time">Pick Tutor Working Starting Time</string>
    <string name="make_tutor_schedule_end_time">Pick Tutor Working Ending Time</string>
    <string name="to">TO</string>
    <string name="make_tutor_instructions">Please give the topic the tutor will be responseble for</string>
    <string name="topic">Topic</string>
	<string name = "add_new_slot_description">Do you want to sign up for an appointment at %1$s.</string>
	<string name = "new_appointment">New Appointment</string>
</resources>