<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

     <ImageView
        android:id="@+id/rose_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:src="@drawable/rose_logo" />
    
    <EditText
        android:id="@+id/edittext_sign_up_createPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_sign_up_username"
        android:layout_below="@+id/edittext_sign_up_justname"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/sign_up_createPass"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_sign_up_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rose_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/sign_up_username"
        android:inputType="text"
        android:textSize="20sp" >

    </EditText>
    
    
     <EditText
        android:id="@+id/edittext_sign_up_justname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_sign_up_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="20sp" >

    </EditText>

    <EditText
        android:id="@+id/edittext_sign_up_confirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_sign_up_createPass"
        android:layout_below="@+id/edittext_sign_up_createPass"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/sign_up_confrimPass"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_signup_sign_up"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_sign_up_confirmPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/button_signup_go_back"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_signup_sign_up"
        android:layout_below="@+id/button_signup_sign_up"
        android:layout_marginTop="23dp"
        android:text="@string/go_back" />

</RelativeLayout>