<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

  
    <TextView
        android:id="@+id/tutor_scheduel_name_text_view"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tutor_schedule_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tutor_scheduel_name_text_view"
        android:layout_alignBottom="@+id/tutor_scheduel_name_text_view"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:text="@string/time"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tutor_schedule_major_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tutor_scheduel_name_text_view"
        android:layout_marginLeft="47dp"
        android:paddingLeft="5dp"
        android:text="@string/major"
        android:textSize="12sp" />

</RelativeLayout>