<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.learningcenterapp.LogInActivity" >

    <EditText
        android:id="@+id/edittext_log_in_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_log_in_username"
        android:layout_below="@+id/edittext_log_in_username"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/log_in_password"
        android:inputType="textPassword"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button_login_sign_in"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_log_in_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/log_in_signin" />

    <Button
        android:id="@+id/button_login_sign_up"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_login_sign_in"
        android:layout_below="@+id/button_login_sign_in"
        android:layout_marginTop="21dp"
        android:text="@string/sign_up" />

    <ImageView
        android:id="@+id/rose_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/rose_logo" />

    <EditText
        android:id="@+id/edittext_log_in_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rose_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/log_in_username"
        android:inputType="text"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>