<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <DatePicker
            android:id="@+id/make_tutor_schedule_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/make_tutor_schedule_date_pick_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TimePicker
            android:id="@+id/make_tutor_schedule_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/make_tutor_schedule_start_time_text_view"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp" />

        <TimePicker
            android:id="@+id/make_tutor_schedule_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/make_tutor_schedule_end_time_text_view"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/make_tutor_schedule_date_pick_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/make_tutor_schedule_date_picker"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/make_tutor_schedule_pick_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/make_tutor_schedule_start_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/make_tutor_schedule_date_picker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/make_tutor_schedule_start_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/make_tutor_schedule_end_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/make_tutor_schedule_start_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/make_tutor_schedule_end_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/make_tutor_schedule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/make_tutor_schedule_end_time"
            android:layout_marginTop="20dp"
            android:text="@string/commit" />

    </RelativeLayout>

</ScrollView>